feat:pulito il file

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,2 +1,2 @@
-@import './vendors/bootstrap-vue/index';
-@import './vendors/smartify/index';
+@import "./vendors/bootstrap-vue/index";
+@import "./vendors/smartify-2.0/index";
